--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
+    
 </head>
 <body>
     <div class ="contenedor">
@@ -23,9 +24,12 @@
         <div class="numero">9</div>
         <div class="operador">+</div>
         <div class="operador">-</div>
+        <div class="operador">*</div>
+        <div class="operador">/</div>
         <div class="igual">=</div>
         <div class="borrar">c</div>
         
     </div>
+    <script src="js/main.js"></script>
 </body>
 </html>
